--- a/FlowCrypt/src/main/res/layout/activity_send_email.xml
+++ b/FlowCrypt/src/main/res/layout/activity_send_email.xml
@@ -8,7 +8,7 @@
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
-             tools:context=".SendEmailActivity">
+             tools:context=".ui.activity.SendEmailActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
