--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -2,4 +2,20 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="default_button_height">64dp</dimen>
+
+    <dimen name="default_margin_small">5dp</dimen>
+    <dimen name="default_margin_medium">10dp</dimen>
+
+    <dimen name="default_text_size_big">18sp</dimen>
+    <dimen name="default_text_size_medium">16sp</dimen>
+    <dimen name="default_text_size_default">14sp</dimen>
+
+    <dimen name="margin_top_main_screen_button">32dp</dimen>
+    <dimen name="margin_top_main_screen_button_sign_via_gmail">60dp</dimen>
+    <dimen name="text_size_logo_crypt">48sp</dimen>
+    <dimen name="drawable_padding_main_screen_sign_button">24dp</dimen>
+    <dimen name="padding_left_main_screen_sign_button">24dp</dimen>
+    <dimen name="padding_right_main_screen_sign_button">60dp</dimen>
 </resources>
