--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -6,6 +6,44 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppWidget" />
+
+    <style name="AppWidget.Button">
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="AppWidget.Button.Transparent">
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="AppWidget.Button.Transparent.MainScreenTopButton">
+        <item name="android:textColor">@color/silver_chalice</item>
+        <item name="android:textSize">@dimen/default_text_size_big</item>
+    </style>
+
+    <style name="AppWidget.Button.MainScreenSignButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/default_button_height</item>
+        <item name="android:paddingLeft">@dimen/padding_left_main_screen_sign_button</item>
+        <item name="android:paddingRight">@dimen/padding_right_main_screen_sign_button</item>
+        <item name="android:drawablePadding">@dimen/drawable_padding_main_screen_sign_button</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/default_text_size_medium</item>
+        <item name="colorButtonNormal">@android:color/white</item>
+    </style>
+
+    <style name="AppWidget.Button.Raised.MainScreenSignButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@android:color/white</item>
     </style>
 
 </resources>
