--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="drawable_padding_main_screen_sign_button">24dp</dimen>
     <dimen name="padding_left_main_screen_sign_button">24dp</dimen>
     <dimen name="padding_right_main_screen_sign_button">60dp</dimen>
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
