--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -46,4 +46,8 @@
         <item name="colorButtonNormal">@android:color/white</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
