Removed unused resources. Created BaseAuthenticationActivity. Refactored code.

--- a/FlowCrypt/src/main/res/layout/activity_splash.xml
+++ b/FlowCrypt/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context="com.flowcrypt.email.ui.activity.SplashActivity">
 
-    <include layout="@layout/content_splash" />
+    <include
+        android:id="@+id/splashView"
+        layout="@layout/content_splash" />
 
 </android.support.design.widget.CoordinatorLayout>
