--- a/FlowCrypt/src/main/res/menu/activity_email_manager_drawer.xml
+++ b/FlowCrypt/src/main/res/menu/activity_email_manager_drawer.xml
@@ -4,16 +4,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="About" />
+            android:icon="@mipmap/ic_gmail"
+            android:title="Sample" />
     </group>
 
-    <item android:title="Authentication">
+    <item android:title="@string/authentication">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Log out" />
+                android:id="@+id/navigationMenuLogOut"
+                android:icon="@mipmap/ic_sign_out"
+                android:title="@string/log_out" />
         </menu>
     </item>
 
