--- a/FlowCrypt/src/main/res/layout/content_email_manager.xml
+++ b/FlowCrypt/src/main/res/layout/content_email_manager.xml
@@ -2,7 +2,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
+    android:id="@+id/emailListFragment"
     android:name="com.flowcrypt.email.ui.activity.fragment.EmailListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
