--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="fruit_salad">#4CAF50</color>
     <color name="sea_green">#2E7D32</color>
     <color name="de_york">#81C784</color>
+    <color name="scorpion">#5b5b5b</color>
+    <color name="gray">#898989</color>
 </resources>
