--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="loader_id_post_lookup_email" type="id" />
     <item name="loader_id_post_prototype_message" type="id" />
     <item name="loader_id_load_gmail_messages" type="id" />
+    <item name="loader_id_load_gmail_backups" type="id" />
 </resources>
