--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
     <style name="AppWidget" />
 
     <style name="AppWidget.Button">
+        <item name="android:layout_height">@dimen/default_button_height</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -31,23 +32,23 @@
 
     <style name="AppWidget.Button.MainScreenSignButton">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">@dimen/default_button_height</item>
         <item name="android:paddingLeft">@dimen/padding_left_main_screen_sign_button</item>
         <item name="android:paddingRight">@dimen/padding_right_main_screen_sign_button</item>
         <item name="android:drawablePadding">@dimen/drawable_padding_main_screen_sign_button</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/default_text_size_medium</item>
-        <item name="colorButtonNormal">@android:color/white</item>
     </style>
 
     <style name="AppWidget.Button.Raised.MainScreenSignButton" parent="Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">@android:color/white</item>
     </style>
 
+    <style name="AppWidget.Button.Raised.Green" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">#31a217</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
 </resources>
