--- a/FlowCrypt/src/main/res/layout/fragment_restore_account.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_restore_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.fragment.RestoreAccountActivityFragment"
+    tools:context="com.flowcrypt.email.ui.activity.fragment.RestoreAccountFragment"
     tools:showIn="@layout/activity_restore_account">
 
     <TextView
