--- a/FlowCrypt/src/main/res/layout/content_restore_account.xml
+++ b/FlowCrypt/src/main/res/layout/content_restore_account.xml
@@ -1,7 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
+    android:id="@+id/restoreAccountFragment"
     android:name="com.flowcrypt.email.ui.activity.fragment.RestoreAccountFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
