--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="loader_id_post_prototype_message" type="id" />
     <item name="loader_id_load_gmail_messages" type="id" />
     <item name="loader_id_load_gmail_backups" type="id" />
+    <item name="loader_id_decrypt_private_keys" type="id" />
 </resources>
