--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -5,4 +5,5 @@
     <item name="loader_id_load_gmail_messages" type="id" />
     <item name="loader_id_load_gmail_backups" type="id" />
     <item name="loader_id_decrypt_private_keys" type="id" />
+    <item name="loader_id_load_message_info" type="id" />
 </resources>
