--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="de_york">#81C784</color>
     <color name="scorpion">#5b5b5b</color>
     <color name="gray">#898989</color>
+    <color name="mine_shaft">#333333</color>
+    <color name="silver">#C6C6C6</color>
 </resources>
