Added a test version of sending encrypted message. (Compose variant).

--- a/FlowCrypt/src/main/res/menu/fragment_secure_compose.xml
+++ b/FlowCrypt/src/main/res/menu/fragment_secure_compose.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menuIdSend"
-        android:icon="@android:drawable/ic_menu_send"
+        android:id="@+id/menuActionSend"
+        android:icon="@mipmap/ic_action_send"
         android:title="@string/send"
         app:showAsAction="always"/>
 </menu>
