--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -6,4 +6,5 @@
     <item name="loader_id_load_gmail_backups" type="id" />
     <item name="loader_id_decrypt_private_keys" type="id" />
     <item name="loader_id_load_message_info" type="id" />
+    <item name="loader_id_send_encrypted_message" type="id" />
 </resources>
