--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
 
     <dimen name="default_margin_small">5dp</dimen>
     <dimen name="default_margin_medium">10dp</dimen>
+    <dimen name="default_margin_big">15dp</dimen>
 
     <dimen name="default_text_size_big">18sp</dimen>
     <dimen name="default_text_size_medium">16sp</dimen>
