--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -8,4 +8,5 @@
     <item name="loader_id_load_message_info" type="id" />
     <item name="loader_id_send_encrypted_message" type="id" />
     <item name="loader_id_load_gmail_labels" type="id" />
+    <item name="loader_id_update_info_about_pgp_contacts" type="id" />
 </resources>
