--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="gray">#898989</color>
     <color name="mine_shaft">#333333</color>
     <color name="silver">#C6C6C6</color>
+    <color name="la_palma">#31A217</color>
 </resources>
