--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -36,4 +36,6 @@
     <dimen name="margin_top_button_select_another_account">24dp</dimen>
     <dimen name="height_silver_line">1dp</dimen>
     <dimen name="size_of_small_progressbar">16dp</dimen>
+    <dimen name="margin_top_fisrt_button">96dp</dimen>
+    <dimen name="margin_between_buttons">32dp</dimen>
 </resources>
