Added the Settings screen. Close #23.

--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="mine_shaft">#333333</color>
     <color name="silver">#C6C6C6</color>
     <color name="la_palma">#31A217</color>
+    <color name="dove_gray">#666666</color>
 </resources>
