--- a/FlowCrypt/src/main/res/menu/activity_email_manager_drawer.xml
+++ b/FlowCrypt/src/main/res/menu/activity_email_manager_drawer.xml
@@ -23,4 +23,8 @@
         </menu>
     </item>
 
+    <item
+        android:id="@+id/navigationMenuActionSettings"
+        android:icon="@mipmap/ic_settings"
+        android:title="@string/action_settings" />
 </menu>
