--- a/FlowCrypt/src/main/res/menu/activity_settings.xml
+++ b/FlowCrypt/src/main/res/menu/activity_settings.xml
@@ -1,10 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.flowcrypt.email.ui.activity.SplashActivity">
+    tools:context="com.flowcrypt.email.ui.activity.SettingsActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menuActionHelp"
+        android:icon="@mipmap/ic_help"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/help"
+        app:showAsAction="always" />
 </menu>
