--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="preferenceTheme">@style/PreferenceTheme</item>
     </style>
 
     <style name="AppWidget" />
@@ -59,4 +60,14 @@
     <style name="AppTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="PreferenceTheme" parent="PreferenceThemeOverlay.v14.Material">
+        <item name="preferenceStyle">@style/AppTheme.Preference</item>
+        <item name="android:textColor">@color/dove_gray</item>
+        <item name="android:textSize">@dimen/default_text_size_big</item>
+    </style>
+
+    <style name="AppTheme.Preference" parent="Preference.Material">
+        <item name="android:layout">@layout/preference_item</item>
+    </style>
 </resources>
