Moved settings activities to the settings directory.

--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -4,7 +4,7 @@
         android:layout="@layout/preference_item"
         android:title="@string/backup">
         <!--<intent
-            android:targetClass="com.flowcrypt.email.ui.activity.SettingsActivity"
+            android:targetClass="com.flowcrypt.email.ui.activity.settings.SettingsActivity"
             android:targetPackage="@string/application_id" />-->
     </Preference>
 
@@ -18,7 +18,7 @@
 
     <Preference android:title="@string/legal">
         <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.LegalSettingsActivity"
+            android:targetClass="com.flowcrypt.email.ui.activity.settings.LegalSettingsActivity"
             android:targetPackage="@string/application_id" />
     </Preference>
 </PreferenceScreen>
