--- a/FlowCrypt/src/main/res/menu/activity_settings.xml
+++ b/FlowCrypt/src/main/res/menu/activity_settings.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.flowcrypt.email.ui.activity.SettingsActivity">
+    tools:context="com.flowcrypt.email.ui.activity.settings.SettingsActivity">
     <item
         android:id="@+id/menuActionHelp"
         android:icon="@mipmap/ic_help"
