--- a/FlowCrypt/src/main/res/layout/pgp_contact_item.xml
+++ b/FlowCrypt/src/main/res/layout/pgp_contact_item.xml
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/default_margin_content_small"
+        android:layout_marginStart="@dimen/default_margin_content_small"
         android:layout_marginTop="@dimen/default_margin_content_small"
         android:textSize="@dimen/default_text_size_big"
         android:visibility="gone"
