--- a/FlowCrypt/src/main/res/layout/activity_feedback.xml
+++ b/FlowCrypt/src/main/res/layout/activity_feedback.xml
@@ -9,75 +9,90 @@
 
     <include layout="@layout/toolbar" />
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
+        android:id="@id/layoutContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <View
-            android:id="@+id/viewDivider"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/default_single_dip"
-            android:layout_marginBottom="@dimen/default_margin_content"
-            android:background="@color/silver"
-            app:layout_constraintBottom_toTopOf="@+id/textViewAuthorHint"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <TextView
-            android:id="@+id/textViewAuthorHint"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/i_will_usually_reply_within_an_hour_except_when_i_sleep_tom"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:textColor="@color/gray"
-            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
-            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-            app:layout_constraintRight_toLeftOf="@+id/guidelineRight" />
-
-        <EditText
-            android:id="@+id/editTextUserMessage"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@null"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="@string/your_message"
-            android:inputType="textMultiLine"
-            android:textColorHint="@color/silver"
-            app:layout_constraintBottom_toTopOf="@+id/viewDivider"
-            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineLeft"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/default_margin_content" />
+            android:layout_gravity="center"
+            android:visibility="gone" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineTop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="@dimen/default_margin_content" />
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/layoutInput"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineRight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/default_margin_content" />
+            <View
+                android:id="@+id/viewDivider"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/default_single_dip"
+                android:layout_marginBottom="@dimen/default_margin_content"
+                android:background="@color/silver"
+                app:layout_constraintBottom_toTopOf="@+id/textViewAuthorHint"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineBottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_end="@dimen/default_margin_content" />
-    </android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/textViewAuthorHint"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/i_will_usually_reply_within_an_hour_except_when_i_sleep_tom"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@color/gray"
+                app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
+                app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+                app:layout_constraintRight_toLeftOf="@+id/guidelineRight" />
+
+            <EditText
+                android:id="@+id/editTextUserMessage"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@null"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="@string/your_message"
+                android:inputType="textMultiLine"
+                android:textColorHint="@color/silver"
+                app:layout_constraintBottom_toTopOf="@+id/viewDivider"
+                app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+                app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+                app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guidelineLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/default_margin_content" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guidelineTop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="@dimen/default_margin_content" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guidelineRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/default_margin_content" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guidelineBottom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="@dimen/default_margin_content" />
+        </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 
 </LinearLayout>
