--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -10,4 +10,5 @@
     <item name="loader_id_load_gmail_labels" type="id" />
     <item name="loader_id_update_info_about_pgp_contacts" type="id" />
     <item name="loader_id_load_contacts_with_has_pgp_true" type="id" />
+    <item name="loader_id_post_help_feedback" type="id" />
 </resources>
