--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -3,9 +3,9 @@
     <Preference
         android:layout="@layout/preference_item"
         android:title="@string/backup">
-        <!--<intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.SettingsActivity"
-            android:targetPackage="@string/application_id" />-->
+        <intent
+            android:targetClass="com.flowcrypt.email.ui.activity.settings.BackupSettingsActivity"
+            android:targetPackage="@string/application_id" />
     </Preference>
 
     <Preference android:title="@string/security"></Preference>
