--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -12,4 +12,6 @@
     <item name="loader_id_load_contacts_with_has_pgp_true" type="id" />
     <item name="loader_id_post_help_feedback" type="id" />
     <item name="loader_send_backup_with_private_key_to_myself" type="id" />
+    <item name="loader_id_archive_message" type="id" />
+    <item name="loader_id_delete_message" type="id" />
 </resources>
