--- a/FlowCrypt/src/main/res/layout/messages_list_item.xml
+++ b/FlowCrypt/src/main/res/layout/messages_list_item.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/senderAddressTextView"
+        android:id="@+id/textViewSenderAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
@@ -17,12 +17,12 @@
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/dateTextView"
+        app:layout_constraintRight_toLeftOf="@+id/textViewDate"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
         tools:text="tom@cryptup.org" />
 
     <TextView
-        android:id="@+id/subjectTextView"
+        android:id="@+id/textViewSubject"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
@@ -36,13 +36,13 @@
         app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/dateTextView"
-        app:layout_constraintTop_toBottomOf="@+id/senderAddressTextView"
+        app:layout_constraintRight_toLeftOf="@+id/textViewDate"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
         app:layout_constraintVertical_bias="0.0"
         tools:text="What up man" />
 
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
@@ -50,6 +50,17 @@
         android:textSize="@dimen/default_text_size_medium"
         app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
+        tools:text="July 7" />
+
+    <TextView
+        android:id="@+id/textViewTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/default_text_size_medium"
+        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
         tools:text="1:05 PM" />
 
     <android.support.constraint.Guideline
