--- a/FlowCrypt/src/main/res/layout/app_bar_email_manager.xml
+++ b/FlowCrypt/src/main/res/layout/app_bar_email_manager.xml
@@ -22,4 +22,13 @@
 
     <include layout="@layout/content_email_manager" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatActionButtonCompose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@mipmap/ic_white_plus"
+        app:backgroundTint="@color/colorPrimary" />
+
 </android.support.design.widget.CoordinatorLayout>
