--- a/FlowCrypt/src/main/res/layout/content_email_manager.xml
+++ b/FlowCrypt/src/main/res/layout/content_email_manager.xml
@@ -7,4 +7,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_splash" />
+    tools:layout="@layout/fragment_email_list" />
