Removed prototype code. Close #29.

--- a/FlowCrypt/src/main/res/layout/fragment_security_reply.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_security_reply.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context=".ui.activity.SendEmailActivity">
+    android:orientation="vertical">
 
     <ProgressBar
         android:id="@+id/progressBar"
