--- a/FlowCrypt/src/main/res/layout/fragment_email_list.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_email_list.xml
@@ -17,10 +17,17 @@
         android:text="@string/no_results"
         android:visibility="gone" />
 
-    <ListView
-        android:id="@+id/listViewMessages"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/listViewMessages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
