Fixed a bug with start the sync service after restoring an account. | #31.

--- a/FlowCrypt/src/main/res/layout/fragment_email_list.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_email_list.xml
@@ -25,7 +25,8 @@
         <ListView
             android:id="@+id/listViewMessages"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="gone" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
@@ -34,7 +35,6 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone" />
+        android:layout_gravity="center" />
 
 </FrameLayout>
