--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -17,4 +17,8 @@
     <item name="loader_send_backup_with_private_key_to_myself" type="id" />
     <item name="loader_id_archive_message" type="id" />
     <item name="loader_id_delete_message" type="id" />
+
+    <item name="syns_request_code_update_label" type="id" />
+    <item name="syns_request_code_load_next_messages" type="id" />
+    <item name="syns_request_code_force_load_new_messages" type="id" />
 </resources>
